# hms-fastapi-app

./: .dockerignore  .gitignore  Dockerfile  FRONTEND_INSTRUCTIONS.md  Makefile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: linting-formatting.yaml
src/: app.py  auth.py
src/db/: session.py
src/schemas/: patients_schema.py
static/: index.html  script.js  style.css
